--- a/Work Tracker/res/layout/main.xml
+++ b/Work Tracker/res/layout/main.xml
@@ -2,11 +2,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:gravity="center"
     android:orientation="vertical" >
 
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/hello" />
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:text="05:10"
+        android:textSize="35dip" />
+
+    <Button
+        android:id="@+id/recordsButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Records" />
 
 </LinearLayout>
