created first screen menu

--- a/Work Tracker/res/layout/first_screen.xml
+++ b/Work Tracker/res/layout/first_screen.xml
@@ -3,8 +3,7 @@
     android:id="@+id/mainLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="10dip"
-    android:orientation="vertical" >
+    android:orientation="vertical" android:padding="10dip">
 
     <LinearLayout
         android:id="@+id/linearLayout1"
@@ -13,15 +12,15 @@
 
         <Spinner
             android:id="@+id/spinner1"
-            android:layout_width="215dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="80" />
+            android:layout_weight="90" />
 
         <Button
             android:id="@+id/button1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/settings" android:layout_weight="20" android:textSize="20dip"/>
+            android:text="@string/settings" android:layout_weight="10" android:textSize="20dip"/>
 
     </LinearLayout>
 
@@ -56,13 +55,14 @@
             android:id="@+id/linearLayout16"
             android:layout_width="wrap_content"
             android:layout_height="match_parent" android:gravity="bottom|right" android:layout_weight="1">
-
+
             <TextView
                 android:id="@+id/textView16"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/today"
-                android:textAppearance="?android:attr/textAppearanceSmall" android:layout_marginRight="5dip"/>
+                android:layout_marginRight="5dip"
+                android:text="@string/income"
+                android:textAppearance="?android:attr/textAppearanceSmall" />
 
             <TextView
                 android:id="@+id/textView17"
@@ -196,7 +196,7 @@
         android:id="@+id/linearLayout9"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" android:layout_marginTop="30dip">
+        android:orientation="vertical" android:layout_marginTop="30dip" android:layout_marginBottom="10dip">
 
         <TextView
             android:id="@+id/textView6"
