- implemented record_row, records_layout and records_layout_menu

--- a/Work Tracker/res/layout/records_layout.xml
+++ b/Work Tracker/res/layout/records_layout.xml
@@ -24,6 +24,25 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/linearLayout2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" android:visibility="gone">
+
+        <Button
+            android:id="@+id/button1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Button" android:layout_weight="1"/>
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Button" android:layout_weight="1"/>
+
+    </LinearLayout>
+
     <ListView
         android:id="@+id/list"
         android:layout_width="fill_parent"
