- added "send email" functionality. For now it only sends text, I still have to attach a file WORKTRACKER-28

--- a/Work Tracker/res/layout/record_row.xml
+++ b/Work Tracker/res/layout/record_row.xml
@@ -81,7 +81,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5dip"
-                android:text="@string/total‌_income"
+                android:text="@string/tot_income"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
 
             <TextView
