--- a/Work Tracker/res/layout/first_screen.xml
+++ b/Work Tracker/res/layout/first_screen.xml
@@ -87,7 +87,7 @@
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/linearLayout14"
+            android:id="@+id/punchInInfoLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
