-job settings -job list activity

--- a/Work Tracker/res/layout/jobs_layout.xml
+++ b/Work Tracker/res/layout/jobs_layout.xml
@@ -2,12 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical" android:padding="10dip">
 
     <ListView
         android:id="@+id/list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content" android:layout_weight="1">
     </ListView>
+
+    <Button
+        android:id="@+id/addNewJobButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="@string/add_new_job" />
 
 </LinearLayout>
