--- a/Work Tracker/res/layout/records_layout.xml
+++ b/Work Tracker/res/layout/records_layout.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content" >
 
         <Spinner
-            android:id="@+id/spinner1"
+            android:id="@+id/jobSpinner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1" />
