--- a/Work Tracker/res/layout/records_layout.xml
+++ b/Work Tracker/res/layout/records_layout.xml
@@ -8,7 +8,7 @@
     <LinearLayout
         android:id="@+id/normalLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content" android:gravity="center">
 
         <Spinner
             android:id="@+id/jobSpinner"
